# BlenderNanoBanana

./: .gitignore  README.md  build.bat  test_genai.py  test_sdk.py  test_timeout.py  test_timeout2.py  test_timeout_out.txt
blender_addon/: __init__.py  install_dependencies.py  preferences.py
blender_addon/api/: __init__.py  api_client.py  google_llm.py  google_vision.py
blender_addon/config/: __init__.py  constants.py  defaults.py  engine_presets.py  semantic_tags.py
blender_addon/core/: __init__.py  cache_manager.py  log_display.py  model_analyzer.py  project_manager.py  prompt_engineer.py  reference_generator.py  rust_bridge.py  semantic_adapter.py  semantic_manager.py  texture_generator.py  unwrap_engine.py  uv_analyzer.py  uv_compositor.py  uv_layout_capture.py  uv_seam_overlay.py  viewport_handler.py  viewport_overlay.py
blender_addon/ops/: __init__.py  cache_ops.py  install_ops.py  model_ops.py  reference_ops.py  seam_tag_ops.py  semantic_ops.py  texture_ops.py  unwrap_ops.py
blender_addon/ui/: __init__.py  cache_panel.py  image_editor_panel.py  main_panel.py  model_panel.py  semantic_panel.py  texture_panel.py  uv_panel.py  viewport_overlay.py
blender_addon/utils/: __init__.py  geometry.py  image_processing.py  logging.py  (+4 more)
rust_backend/: Cargo.toml
rust_backend/.cargo/: config.toml
rust_backend/src/: main.rs
rust_backend/src/models/: mod.rs
rust_backend/src/operations/: image_processing.rs  math.rs  mesh_analysis.rs  mod.rs  uv_analysis.rs
rust_backend/src/server/: handlers.rs  mod.rs  protocol.rs
rust_backend/src/utils/: error.rs
